--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,10 @@
             "styles": [
               "src/styles.css",
               "node_modules/primeng/resources/themes/bootstrap4-light-purple/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/quill/dist/quill.snow.css",                   
+              "node_modules/quill/dist/quill.bubble.css"  
             ],
             "scripts": []
           },
