Add baseHref configuration and import PanelModule in primemodules

--- a/angular.json
+++ b/angular.json
@@ -42,7 +42,8 @@
               "node_modules/quill/dist/quill.snow.css",                   
               "node_modules/quill/dist/quill.bubble.css"  
             ],
-            "scripts": []
+            "scripts": [],
+            "baseHref": "/blogadmin/"  
           },
           "configurations": {
             "production": {
