--- a/angular.json
+++ b/angular.json
@@ -42,8 +42,7 @@
               "node_modules/quill/dist/quill.snow.css",                   
               "node_modules/quill/dist/quill.bubble.css"  
             ],
-            "scripts": [],
-            "baseHref": "/blogadmin/"  
+            "scripts": []
           },
           "configurations": {
             "production": {
